Added support for start, end and range options

--- a/test/Gemfile
+++ b/test/Gemfile
@@ -2,8 +2,9 @@ source 'https://rubygems.org'
 
 # Specify your gem's dependencies in jekyll-markdown-block.gemspec
 group :jekyll_plugins do
-  gem "octopress-ink", path: "../../ink"
+  gem "octopress-code-highlighter", path: "../../code-highlighter"
   gem "octopress-gist", path: "../"
+  gem "pry-debugger"
 end
 
 gem "redcarpet"
