--- a/test/_config.yml
+++ b/test/_config.yml
@@ -1,11 +1,8 @@
-name: Your New Jekyll Site
 markdown: redcarpet
 redcarpet:
   smart: false
-source: source
-plugins: source/_plugins
-destination: site
-highlighter: false
+exclude:
+  - Gemfile
 
 gems:
   - octopress-gist
